--- a/appState.json
+++ b/appState.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100068012051840%22%3A%22DUOKiiHO%22%7D",
+        "value": "%7B%22100068012051840%22%3A%22wexsvsyF%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.244Z",
-        "lastAccessed": "2025-04-24T05:22:41.245Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.245Z",
-        "lastAccessed": "2025-04-24T05:22:41.245Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.245Z",
-        "lastAccessed": "2025-04-24T05:22:41.245Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.245Z",
-        "lastAccessed": "2025-04-24T05:22:41.245Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "ps_n",
@@ -41,44 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.245Z",
-        "lastAccessed": "2025-04-24T05:22:41.245Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x694",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100068012051840",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
-    },
-    {
-        "key": "fr",
-        "value": "0ynyuiC1jHeY4yyDu.AWfWocrs5Mu-1y7EAuuNwm_BvJQDmBIOxGEhLomiUiAqRxSOtaM.Bn0Y0o..AAA.0.0.BoCcqT.AWewSxktluSmhFuJRZzNenMjpB0",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
-    },
-    {
-        "key": "xs",
-        "value": "46%3AG3x3jvHxB_DSEw%3A2%3A1745472149%3A-1%3A7833",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "locale",
@@ -86,26 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2795%3Btimestamp%3A1745472155",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100422326%3BT%3A29091202",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     },
     {
         "key": "vpd",
@@ -113,7 +59,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:22:41.246Z",
-        "lastAccessed": "2025-04-24T05:22:41.246Z"
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x694",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "c_user",
+        "value": "100068012051840",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "fr",
+        "value": "0ynyuiC1jHeY4yyDu.AWeEmnh-fl-lxw0w-MxxpQS3EsH7r2KQWiWyKLN5oStX0s81kD8.Bn0Y0o..AAA.0.0.BoCczo.AWdAud9EJtcjUoNaKOgq0QEpiaI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "xs",
+        "value": "39%3AR2YB5fcUkA7dQQ%3A2%3A1745472745%3A-1%3A7833",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101424559%3BT%3A29091212",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2795%3Btimestamp%3A1745472752%3BCRCM%3A1978958603",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-04-24T05:33:30.321Z",
+        "lastAccessed": "2025-04-24T05:33:30.321Z"
     }
 ]
