--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "prefix": "#",
-  "ownerID": "100030880666720",
+  "prefix": "/",
+  "ownerID": "100047583997347",
   "autoRestart": false,
   "autoGreet": false,
   "option": {
