--- a/appState.json
+++ b/appState.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "datr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "vpd",
@@ -59,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "wd",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "c_user",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.833Z",
+        "lastAccessed": "2025-04-25T00:22:06.833Z"
     },
     {
         "key": "fr",
@@ -95,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.834Z",
+        "lastAccessed": "2025-04-25T00:22:06.834Z"
     },
     {
         "key": "xs",
@@ -104,25 +95,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.834Z",
+        "lastAccessed": "2025-04-25T00:22:06.834Z"
     },
     {
         "key": "fbl_st",
-        "value": "101424559%3BT%3A29091212",
+        "value": "101633456%3BT%3A29092342",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.834Z",
+        "lastAccessed": "2025-04-25T00:22:06.834Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2795%3Btimestamp%3A1745472752%3BCRCM%3A1978958603",
+        "value": "v2%3Bclient_version%3A2795%3Btimestamp%3A1745540520",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-04-24T05:33:30.321Z",
-        "lastAccessed": "2025-04-24T05:33:30.321Z"
+        "creation": "2025-04-25T00:22:06.834Z",
+        "lastAccessed": "2025-04-25T00:22:06.834Z"
     }
 ]
